--- a/build.gradle
+++ b/build.gradle
@@ -19,3 +19,9 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+allprojects {
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+    }
+}
