--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation 'com.google.code.gson:gson:2.8.7'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+
 }
 
 test {
